# Projeto-Robotica

./: .gitignore  README.md  platformio.ini
Modelagem3D/: Battery Container Support.stl  Case-Contrapeso - Part 2.stl  Case_Baterias - Part 1.stl  Guia + Garfo - Part 1 (4).stl  Guia + Garfo - Part 2 (3).stl  Guia + Garfo - Part 4.stl  Motor Holder.stl  Polia - Part 1.stl  Roof holder - Part 1.stl  Roof holder - Part 2.stl  Roof holder - Part 3.stl  Roof holder - Part 4.stl  Suporte esp32 - Part 1 (1).stl  Suporte esp32 - Part 2 (1).stl  suporte motor elevação - Part 1.stl
mosquitto/config/: mosquitto.conf
src/: camera_pins.h  david_code.cpp  gabriel_code.cpp  main.cpp
ui/: aruco_markers.py  calibrate_camera.py  fake_robot.py  gabriel_client.py  main.py  pid_tuner.html  pyproject.toml  simple_server.py
ui-frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
ui-frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
ui-frontend/src/components/: CameraFeed.tsx
